# cs372.lewis.fa25

apps/DialogTree/: CMakeLists.txt  dialogtree.cpp
apps/ExpTree/: CMakeLists.txt  ExpTree.cpp
apps/TreeTest/: CMakeLists.txt  treetest.cpp
apps/avltest/: CMakeLists.txt  avltree.cpp
apps/bagtest/: CMakeLists.txt
apps/bagtest/source/: BagTest.cpp
apps/clisttest/: CMakeLists.txt  clisttest.cpp  test_clisttest.cpp
apps/dictionary/: CMakeLists.txt  TestDictionary.cpp
apps/hanoi/: CMakeLists.txt  hanoi.cpp  hanoiit.cpp
apps/heapdemo/: CMakeLists.txt  heapstl.cpp  pq.cpp
apps/listtest/: CMakeLists.txt  gselflisttest.cpp  gtestlist.cpp  selflisttest.cpp
apps/queuetest/: CMakeLists.txt  queuetest.cpp  stacktest.cpp
apps/simplecalc/: CMakeLists.txt  simplecalc.cpp
apps/skiplist/: CMakeLists.txt  skiplist.cpp
apps/two_three_test/: CMakeLists.txt  two_three_test.cpp
docs/: README.md
include/: CircularList.hpp  Dictionary.hpp  List.hpp  Pair.hpp  SelfList.hpp  Tree.hpp  avltree.hpp  bag.hpp  myvector.hpp  receiptbag.hpp  skiplist.hpp  vector.hpp
